--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,8 @@ pymongo
 watchdog 
 python-dotenv
 
+pip install opencv-contrib-python==3.4.14.51
+
+
 #watchmedo auto-restart --directory=. --pattern="*.py" --recursive python main.py
 
